# flecs-city

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  neovim.json  vcpkg.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/Application/: Application.cpp  Application.h
src/Environment/: Constants.h  Options.cpp  Options.h
src/Environment/Args/: ConnectAddress.h
src/Logging/: Utils.h
src/Modules/Core/: CMakeLists.txt  Core.cpp  Core.h
src/Modules/Core/ECS/: Phases.cpp  Phases.h
src/Modules/Core/ECS/Components/: CameraComponent.h  PositionComponent.h  ReplicatedComponent.h  TextComponent.h
src/Modules/Core/Network/: Replication.h
src/Modules/Test/: CMakeLists.txt  Test.cpp  Test.h
src/Network/: Client.cpp  Client.h  ClientThread.cpp  ClientThread.h  NetworkThread.cpp  NetworkThread.h  ReplicationPacket.h  ReplicationRequest.h  Server.cpp  Server.h  ServerThread.cpp  ServerThread.h  Types.h  Utils.h
src/Public/ECS/: ComponentRegistry.h  ReplicatedComponent.h
src/Public/Module/: Macros.h  Module.h
src/Public/Utils/: Hash.h
