cmake_minimum_required(VERSION 3.20)

project(
    flecs-city
    VERSION 1.0
    LANGUAGES CXX
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(VCPKG_LIBRARY_LINKAGE dynamic)

find_package(flecs CONFIG REQUIRED)
find_package(raylib CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(GameNetworkingSockets CONFIG REQUIRED)

# flecs options
set(FLECS_STATIC OFF CACHE BOOL "" FORCE)
set(FLECS_SHARED ON CACHE BOOL "" FORCE)

# raylib options
set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)

# spdlog options
set(SPDLOG_BUILD_SHARED ON CACHE BOOL "" FORCE)

add_subdirectory(src)
